--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
       <img src="./img/logo.png" alt="Akadem Nashr" width="230" height="60">
     </a>
     <nav>
-      <ul>
+      <ul class="list-none">
         <li><a class="sitenav-link" href="index.html">Bosh sahifa</a></li>
         <li><a class="sitenav-link" href="#">Kitoblar</a></li>
         <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
         <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
         <li>Biz haqimizda</li>
       </ul>
-      <a href="#">Ro’yxatdan o’tish</a>
+      <a href="#" class="main-link">Ro’yxatdan o’tish</a>
     </nav>
   </header>
 
   <!-- Saytning asosiy qismi -->
   <main>
     <!-- Hero Section -->
-    <section>
-      <div>
-        <hr>
-        <h2>Pythonda dasturlash asoslari</h2>
-        <p>Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun
+    <section class="hero-section">
+      <div class="hero-content">
+        <hr class="orange-line">
+        <h2 class="hero-title">Pythonda dasturlash asoslari</h2>
+        <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun
           maxsus
           video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
-        <a href="#">Buyurtma berish</a>
+        <a href="#"class="main-link">Buyurtma berish</a>
       </div>
       <div>
         <img src="./img/python-book.jpg" alt="Kitob">
@@ -45,9 +45,9 @@
 
     <!-- Features section -->
     <section>
-      <hr>
-      <h2>Nega aynan Akademnashr?</h2>
-      <ul>
+      <hr class="orange-line">
+      <h2 class="feature-title">Nega aynan Akademnashr?</h2>
+      <ul class="list-none">
         <li>
           <img src="./img/feature-icon1.png" alt="Feature icon">
           <h3>Oson buyurtma qilish</h3>
@@ -89,7 +89,7 @@
       <a href="index.html">
         <img src="./img/logo.png" alt="Akadem Nashr">
       </a>
-      <ul>
+      <ul class="list-none">
         <li><a href="#"><img src="./img/icon-telegram.png" alt="social network"></a></li>
         <li><a href="#"><img src="./img/icon-facebook.png" alt="social network"></a></li>
         <li><a href="#"><img src="./img/icon-instagram.png" alt="social network"></a></li>
@@ -97,14 +97,14 @@
     </div>
     <hr>
     <div>
-      <ul>
+      <ul class="list-none">
         <li><a href="#">Bosh sahifa</a></li>
         <li><a href="#">Kitoblar</a></li>
         <li><a href="#">Aksiyalar</a></li>
         <li><a href="#">Yangiliklar</a></li>
         <li><a href="#">Kontaktlar</a></li>
       </ul>
-      <ul>
+      <ul class="list-none">
         <li><a href="#">Ilmiy nashrlar</a></li>
         <li><a href="#">Ilmiy-ommabop nashrlar</a></li>
         <li><a href="#">Ma’rifiy nashrlar</a></li>
@@ -113,12 +113,12 @@
         <li><a href="#">Abituriyentlar uchun</a></li>
         <li><a href="#">Bolalar uchun</a></li>
       </ul>
-      <ul>
+      <ul class="list-none">
         <li><a href="#">Ko’p so’raladigan savollar</a></li>
         <li><a href="#">Yetkazib berish haqida</a></li>
         <li><a href="#">To’lov usullari haqida</a></li>
       </ul>
-      <ul>
+      <ul class="list-none">
         <li><a href="#">Bo’sh ish o’rinlari</a></li>
         <li><a href="#">Biz bilan bog’lanish</a></li>
         <li><a href="#">Maxfiylik nizomi</a></li>
