--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         <li><a class="sitenav-link" href="#">Kitoblar</a></li>
         <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
         <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
-        <li>Biz haqimizda</li>
       </ul>
       <a href="#" class="main-link">Ro’yxatdan o’tish</a>
     </nav>
@@ -91,7 +90,7 @@
 
   <!-- Saytni podvali -->
   <footer class="site-footer">
-    <div class="site-footer-divider">
+    <div>
       <a href="index.html">
         <img src="./img/logo.png" alt="Akadem Nashr">
       </a>
@@ -101,7 +100,7 @@
         <li><a href="#" class="footer-link"><img src="./img/icon-instagram.png" alt="social network"></a></li>
       </ul>
     </div>
-    <hr>
+    <div class="site-footer-divider"></div>
     <div>
       <ul class="list-none">
         <li><a href="#" class="footer-link">Bosh sahifa</a></li>
