--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
       <div class="hero-content">
         <hr class="orange-line">
         <h2 class="hero-title">Pythonda dasturlash asoslari</h2>
-        <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir
-          bo‘limi uchun
+        <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun
           maxsus
           video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
         <a href="#" class="main-link">Buyurtma berish</a>
       </div>
       <div>
-        <img src="./img/python-book.jpg" alt="Kitob">
+        <img src="./img/python-book.jpg" alt="Kitob" width="510" height="510">
       </div>
     </section>
 
@@ -48,23 +47,21 @@
       <hr class="orange-line">
       <h2 class="feature-title">Nega aynan Akademnashr?</h2>
       <ul class="list-none">
-        <li class="feature-iten">
+        
+        <li class="feature-item">
           <img src="./img/feature-icon1.png" alt="Feature icon">
-          <h3 class="featuer-iten-title">Oson buyurtma qilish</h3>
-          <p class="feature-iten-text">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila
-            olasiz.</p>
+          <h3 class="feature-item-title">Oson buyurtma qilish</h3>
+          <p class="feature-item-text">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
         </li>
-        <li class="feature-iten">
+        <li class="feature-item">
           <img src="./img/feature-icon2.png" alt="Feature icon">
-          <h3 class="featuer-iten-title">Eng sara kitoblar</h3>
-          <p class="feature-iten-text">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi
-            kitoblarni topa olasiz.</p>
+          <h3 class="feature-item-title">Eng sara kitoblar</h3>
+          <p class="feature-item-text">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
         </li>
-        <li class="feature-iten">
+        <li class="feature-item">
           <img src="./img/feature-icon3.png" alt="Feature icon">
-          <h3 class="featuer-iten-title">Tez yetkazib berish</h3>
-          <p class="feature-iten-text">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10
-            ish kuni ichida yetkazib
+          <h3 class="feature-item-title">Tez yetkazib berish</h3>
+          <p class="feature-item-text">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib
             beriladi.</p>
         </li>
       </ul>
@@ -74,19 +71,18 @@
     <section class="sale">
       <div class="sale-content">
         <h2 class="sale-title">Bolalar kitoblari uchun ajoyib aksiya!</h2>
-        <p class="sale-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq
-          qo’llanmalari va komikslar.
+        <p class="sale-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.
         </p>
-        <p class="sale-text">Aksiyadagi eng katta to’plamda 50 ta kitobni 350 ming so’mga (aslida 383 ming so’m) sotib
-          olishingiz mumkin.
+        <p class="sale-text">Aksiyadagi eng katta to’plamda 50 ta kitobni 350 ming so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.
         </p>
         <a href="#" class="main-link">Buyurtma berish</a>
       </div>
       <div>
-        <img width="440" src="./img/sale-img.jpg" alt="Kitob">
+        <img width="440" height="440" src="./img/sale-img.jpg" alt="Kitob">
       </div>
     </section>
   </main>
+
 
   <!-- Saytni podvali -->
   <footer class="site-footer">
@@ -95,9 +91,9 @@
         <img src="./img/logo.png" alt="Akadem Nashr">
       </a>
       <ul class="list-none">
-        <li><a href="#" class="footer-link"><img src="./img/icon-telegram.png" alt="social network"></a></li>
-        <li><a href="#" class="footer-link"><img src="./img/icon-facebook.png" alt="social network"></a></li>
-        <li><a href="#" class="footer-link"><img src="./img/icon-instagram.png" alt="social network"></a></li>
+        <li><a href="#"><img src="./img/icon-telegram.png" alt="social network"></a></li>
+        <li><a href="#"><img src="./img/icon-facebook.png" alt="social network"></a></li>
+        <li><a href="#"><img src="./img/icon-instagram.png" alt="social network"></a></li>
       </ul>
     </div>
     <div class="site-footer-divider"></div>
