--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </a>
     <nav class="site-header-nav">
       <ul class="list-none site-header-list">
-        <li><a class="sitenav-link" href="index.html">Bosh sahifa</a></li>
+        <li><a class="sitenav-link active" href="index.html">Bosh sahifa</a></li>
         <li><a class="sitenav-link" href="#">Kitoblar</a></li>
         <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
         <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
@@ -32,7 +32,8 @@
       <div class="hero-content">
         <hr class="orange-line">
         <h2 class="hero-title">Pythonda dasturlash asoslari</h2>
-        <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun
+        <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir
+          bo‘limi uchun
           maxsus
           video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
         <a href="#" class="main-link">Buyurtma berish</a>
@@ -43,25 +44,28 @@
     </section>
 
     <!-- Features section -->
-    <section>
+    <section class="feature-section">
       <hr class="orange-line">
-      <h2 class="feature-title">Nega aynan Akademnashr?</h2>
+      <h2 class="feature-title">Nega aynan <br> Akademnashr?</h2>
       <ul class="list-none">
-        
+
         <li class="feature-item">
           <img src="./img/feature-icon1.png" alt="Feature icon">
           <h3 class="feature-item-title">Oson buyurtma qilish</h3>
-          <p class="feature-item-text">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+          <p class="feature-item-text">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila
+            olasiz.</p>
         </li>
         <li class="feature-item">
           <img src="./img/feature-icon2.png" alt="Feature icon">
           <h3 class="feature-item-title">Eng sara kitoblar</h3>
-          <p class="feature-item-text">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+          <p class="feature-item-text">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi
+            kitoblarni topa olasiz.</p>
         </li>
         <li class="feature-item">
           <img src="./img/feature-icon3.png" alt="Feature icon">
           <h3 class="feature-item-title">Tez yetkazib berish</h3>
-          <p class="feature-item-text">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib
+          <p class="feature-item-text">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10
+            ish kuni ichida yetkazib
             beriladi.</p>
         </li>
       </ul>
@@ -71,9 +75,11 @@
     <section class="sale">
       <div class="sale-content">
         <h2 class="sale-title">Bolalar kitoblari uchun ajoyib aksiya!</h2>
-        <p class="sale-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq qo’llanmalari va komikslar.
+        <p class="sale-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq
+          qo’llanmalari va komikslar.
         </p>
-        <p class="sale-text">Aksiyadagi eng katta to’plamda 50 ta kitobni 350 ming so’mga (aslida 383 ming so’m) sotib olishingiz mumkin.
+        <p class="sale-text">Aksiyadagi eng katta to’plamda 50 ta kitobni 350 ming so’mga (aslida 383 ming so’m) sotib
+          olishingiz mumkin.
         </p>
         <a href="#" class="main-link">Buyurtma berish</a>
       </div>
