--- a/index.html
+++ b/index.html
@@ -12,80 +12,87 @@
 <body>
   <!-- Saytning shapkasi -->
   <header class="site-header">
-    <a href="index.html">
-      <img src="./img/logo.png" alt="Akadem Nashr" width="230" height="60">
-    </a>
-    <nav class="site-header-nav">
-      <ul class="list-none site-header-list">
-        <li><a class="sitenav-link active" href="index.html">Bosh sahifa</a></li>
-        <li><a class="sitenav-link" href="#">Kitoblar</a></li>
-        <li><a class="sitenav-link" href="#">Aksiyalar</a></li>
-        <li><a class="sitenav-link" href="#">Kontaktlar</a></li>
-      </ul>
-      <a href="#" class="main-link">Ro’yxatdan o’tish</a>
-    </nav>
+    <div class="hero-container container">
+      <a href="index.html">
+        <img src="./img/logo.png" alt="Akadem Nashr" width="230" height="60">
+      </a>
+      <nav class="site-header-nav">
+        <ul class="list-none site-header-list">
+          <li class="saytenav-list-item"><a class="sitenav-link active" href="index.html">Bosh sahifa</a></li>
+          <li class="saytenav-list-item"><a class="sitenav-link" href="#">Kitoblar</a></li>
+          <li class="saytenav-list-item"><a class="sitenav-link" href="#">Aksiyalar</a></li>
+          <li class="saytenav-list-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
+        </ul>
+        <a href="#" class="main-link">Ro’yxatdan o’tish</a>
+      </nav>
+    </div>
+    </div>
   </header>
 
   <!-- Saytning asosiy qismi -->
   <main>
     <!-- Hero Section -->
     <section class="hero-section">
-      <div class="hero-content">
-        <hr class="orange-line">
-        <h2 class="hero-title">Pythonda dasturlash asoslari</h2>
-        <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir
-          bo‘limi uchun
-          maxsus
-          video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
-        <a href="#" class="main-link">Buyurtma berish</a>
-      </div>
-      <div>
-        <img src="./img/python-book.jpg" alt="Kitob" width="510" height="510">
-      </div>
+      <div class="container">
+        <div class="hero-content">
+          <hr class="orange-line">
+          <h2 class="hero-title">Pythonda dasturlash asoslari</h2>
+          <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir
+            bo‘limi uchun
+            maxsus
+            video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
+          <a href="#" class="main-link">Buyurtma berish</a>
+        </div>
+        <div>
+          <img src="./img/python-book.jpg" alt="Kitob" width="510" height="510">
     </section>
 
     <!-- Features section -->
     <section class="feature-section">
-      <hr class="orange-line">
-      <h2 class="feature-title">Nega aynan <br> Akademnashr?</h2>
-      <ul class="list-none">
-
-        <li class="feature-item">
-          <img src="./img/feature-icon1.png" alt="Feature icon">
-          <h3 class="feature-item-title">Oson buyurtma qilish</h3>
-          <p class="feature-item-text">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila
-            olasiz.</p>
-        </li>
-        <li class="feature-item">
-          <img src="./img/feature-icon2.png" alt="Feature icon">
-          <h3 class="feature-item-title">Eng sara kitoblar</h3>
-          <p class="feature-item-text">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi
-            kitoblarni topa olasiz.</p>
-        </li>
-        <li class="feature-item">
-          <img src="./img/feature-icon3.png" alt="Feature icon">
-          <h3 class="feature-item-title">Tez yetkazib berish</h3>
-          <p class="feature-item-text">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10
-            ish kuni ichida yetkazib
-            beriladi.</p>
-        </li>
-      </ul>
+      <div class="container">
+        <hr class="orange-line">
+        <h2 class="feature-title">Nega aynan <br> Akademnashr?</h2>
+        <ul class="list-none feature-list">
+          <li class="feature-item">
+            <img src="./img/feature-icon1.png" alt="Feature icon">
+            <h3 class="feature-item-title">Oson buyurtma qilish</h3>
+            <p class="feature-item-text">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila
+              olasiz.</p>
+          </li>
+          <li class="feature-item">
+            <img src="./img/feature-icon2.png" alt="Feature icon">
+            <h3 class="feature-item-title">Eng sara kitoblar</h3>
+            <p class="feature-item-text">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi
+              kitoblarni topa olasiz.</p>
+          </li>
+          <li class="feature-item">
+            <img src="./img/feature-icon3.png" alt="Feature icon">
+            <h3 class="feature-item-title">Tez yetkazib berish</h3>
+            <p class="feature-item-text">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10
+              ish kuni ichida yetkazib
+              beriladi.</p>
+          </li>
+        </ul>
+      </div>
+      </div>
     </section>
 
     <!-- Sale Section -->
     <section class="sale">
-      <div class="sale-content">
-        <h2 class="sale-title">Bolalar kitoblari uchun ajoyib aksiya!</h2>
-        <p class="sale-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq
-          qo’llanmalari va komikslar.
-        </p>
-        <p class="sale-text">Aksiyadagi eng katta to’plamda 50 ta kitobni 350 ming so’mga (aslida 383 ming so’m) sotib
-          olishingiz mumkin.
-        </p>
-        <a href="#" class="main-link">Buyurtma berish</a>
-      </div>
-      <div>
-        <img width="440" height="440" src="./img/sale-img.jpg" alt="Kitob">
+      <div class="sale-container container">
+        <div class="sale-content">
+          <h2 class="sale-title">Bolalar kitoblari uchun ajoyib aksiya!</h2>
+          <p class="sale-text">Ertaklar, she’rlar, sarguzasht asarlar, fikrlashni o’stirish uchun turli mashq
+            qo’llanmalari va komikslar.
+          </p>
+          <p class="sale-text">Aksiyadagi eng katta to’plamda 50 ta kitobni 350 ming so’mga (aslida 383 ming so’m) sotib
+            olishingiz mumkin.
+          </p>
+          <a href="#" class="main-link">Buyurtma berish</a>
+        </div>
+        <div>
+          <img src="./img/sale-img.jpg" alt="Kitob"width="440" height="440">
+        </div>
       </div>
     </section>
   </main>
@@ -93,44 +100,46 @@
 
   <!-- Saytni podvali -->
   <footer class="site-footer">
-    <div>
-      <a href="index.html">
-        <img src="./img/logo.png" alt="Akadem Nashr">
-      </a>
-      <ul class="list-none">
-        <li><a href="#"><img src="./img/icon-telegram.png" alt="social network"></a></li>
-        <li><a href="#"><img src="./img/icon-facebook.png" alt="social network"></a></li>
-        <li><a href="#"><img src="./img/icon-instagram.png" alt="social network"></a></li>
-      </ul>
-    </div>
-    <div class="site-footer-divider"></div>
-    <div>
-      <ul class="list-none">
-        <li><a href="#" class="footer-link">Bosh sahifa</a></li>
-        <li><a href="#" class="footer-link">Kitoblar</a></li>
-        <li><a href="#" class="footer-link">Aksiyalar</a></li>
-        <li><a href="#" class="footer-link">Yangiliklar</a></li>
-        <li><a href="#" class="footer-link">Kontaktlar</a></li>
-      </ul>
-      <ul class="list-none">
-        <li><a href="#" class="footer-link">Ilmiy nashrlar</a></li>
-        <li><a href="#" class="footer-link">Ilmiy-ommabop nashrlar</a></li>
-        <li><a href="#" class="footer-link">Ma’rifiy nashrlar</a></li>
-        <li><a href="#" class="footer-link">Lug’atlar</a></li>
-        <li><a href="#" class="footer-link">Adabiy-badiiy nashrlar</a></li>
-        <li><a href="#" class="footer-link">Abituriyentlar uchun</a></li>
-        <li><a href="#" class="footer-link">Bolalar uchun</a></li>
-      </ul>
-      <ul class="list-none">
-        <li><a href="#" class="footer-link">Ko’p so’raladigan savollar</a></li>
-        <li><a href="#" class="footer-link">Yetkazib berish haqida</a></li>
-        <li><a href="#" class="footer-link">To’lov usullari haqida</a></li>
-      </ul>
-      <ul class="list-none">
-        <li><a href="#" class="footer-link">Bo’sh ish o’rinlari</a></li>
-        <li><a href="#" class="footer-link">Biz bilan bog’lanish</a></li>
-        <li><a href="#" class="footer-link">Maxfiylik nizomi</a></li>
-      </ul>
+    <div class="container">
+      <div class="footer-top">
+        <a href="index.html">
+          <img src="./img/logo.png" alt="Akadem Nashr">
+        </a>
+        <ul class="list-none footer-top-list">
+          <li><a href="#"><img src="./img/icon-telegram.png" alt="social network"></a></li>
+          <li><a href="#"><img src="./img/icon-facebook.png" alt="social network"></a></li>
+          <li><a href="#"><img src="./img/icon-instagram.png" alt="social network"></a></li>
+        </ul>
+      </div>
+      <div class="site-footer-divider"></div>
+      <div class="footer-bottom">
+        <ul class="list-none">
+          <li><a href="#" class="footer-link">Bosh sahifa</a></li>
+          <li><a href="#" class="footer-link">Kitoblar</a></li>
+          <li><a href="#" class="footer-link">Aksiyalar</a></li>
+          <li><a href="#" class="footer-link">Yangiliklar</a></li>
+          <li><a href="#" class="footer-link">Kontaktlar</a></li>
+        </ul>
+        <ul class="list-none">
+          <li><a href="#" class="footer-link">Ilmiy nashrlar</a></li>
+          <li><a href="#" class="footer-link">Ilmiy-ommabop nashrlar</a></li>
+          <li><a href="#" class="footer-link">Ma’rifiy nashrlar</a></li>
+          <li><a href="#" class="footer-link">Lug’atlar</a></li>
+          <li><a href="#" class="footer-link">Adabiy-badiiy nashrlar</a></li>
+          <li><a href="#" class="footer-link">Abituriyentlar uchun</a></li>
+          <li><a href="#" class="footer-link">Bolalar uchun</a></li>
+        </ul>
+        <ul class="list-none">
+          <li><a href="#" class="footer-link">Ko’p so’raladigan savollar</a></li>
+          <li><a href="#" class="footer-link">Yetkazib berish haqida</a></li>
+          <li><a href="#" class="footer-link">To’lov usullari haqida</a></li>
+        </ul>
+        <ul class="list-none">
+          <li><a href="#" class="footer-link">Bo’sh ish o’rinlari</a></li>
+          <li><a href="#" class="footer-link">Biz bilan bog’lanish</a></li>
+          <li><a href="#" class="footer-link">Maxfiylik nizomi</a></li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
