--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
 <body>
   <!-- Saytning shapkasi -->
   <header class="site-header">
-    <div class="hero-container container">
-      <a href="index.html">
-        <img src="./img/logo.png" alt="Akadem Nashr" width="230" height="60">
-      </a>
-      <nav class="site-header-nav">
-        <ul class="list-none site-header-list">
-          <li class="saytenav-list-item"><a class="sitenav-link active" href="index.html">Bosh sahifa</a></li>
-          <li class="saytenav-list-item"><a class="sitenav-link" href="#">Kitoblar</a></li>
-          <li class="saytenav-list-item"><a class="sitenav-link" href="#">Aksiyalar</a></li>
-          <li class="saytenav-list-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
-        </ul>
-        <a href="#" class="main-link">Ro’yxatdan o’tish</a>
-      </nav>
+    <div class="header-container container">
+      <div class="hero-container">
+        <a href="index.html">
+          <img src="./img/logo.png" alt="Akadem Nashr" width="230" height="60">
+        </a>
+        <nav class="site-header-nav">
+          <ul class="list-none site-header-list">
+            <li class="saytenav-list-item"><a class="sitenav-link active" href="index.html">Bosh sahifa</a></li>
+            <li class="saytenav-list-item"><a class="sitenav-link" href="#">Kitoblar</a></li>
+            <li class="saytenav-list-item"><a class="sitenav-link" href="#">Aksiyalar</a></li>
+            <li class="saytenav-list-item"><a class="sitenav-link" href="#">Kontaktlar</a></li>
+          </ul>
+          <a href="#" class="main-link">Ro’yxatdan o’tish</a>
+        </nav>
+      </div>
     </div>
     </div>
   </header>
@@ -33,9 +35,9 @@
   <main>
     <!-- Hero Section -->
     <section class="hero-section">
-      <div class="container">
+      <div class="hero-container container">
         <div class="hero-content">
-          <hr class="orange-line">
+          <hr class="orange-line hero-line">
           <h2 class="hero-title">Pythonda dasturlash asoslari</h2>
           <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir
             bo‘limi uchun
@@ -91,7 +93,7 @@
           <a href="#" class="main-link">Buyurtma berish</a>
         </div>
         <div>
-          <img src="./img/sale-img.jpg" alt="Kitob"width="440" height="440">
+          <img src="./img/sale-img.jpg" alt="Kitob" width="440" height="440">
         </div>
       </div>
     </section>
