--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </div>
         <div>
           <img src="./img/python-book.jpg" alt="Kitob" width="510" height="510">
+        </div>
     </section>
 
     <!-- Features section -->
